Upping out of bound margin. CSS fixes for touch

--- a/theme/home.less
+++ b/theme/home.less
@@ -76,6 +76,9 @@
     .ui.card {
         border-radius: 0px;
     }
+    .header {
+        user-select: none;
+    }
 }
 
 
